<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_24sdp"
        android:paddingRight="@dimen/_24sdp"
        android:paddingTop="@dimen/_40sdp">

        <TextView
            style="@style/TextRegularSizeRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_password"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textColor="@color/white" />


        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etCurrantPassword"
                style="@style/TextRegularSizeSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currant_password"
                android:paddingBottom="@dimen/_15sdp"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>



        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etNewPassword"
                style="@style/TextRegularSizeSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:paddingBottom="@dimen/_15sdp"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textCapWords|textNoSuggestions"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/TextRegularSizeSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:paddingBottom="@dimen/_15sdp"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textCapWords|textNoSuggestions"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <TextView
            android:id="@+id/tvSave"
            style="@style/TextRegularSizeMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_yellow"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@android:color/black" />


    </LinearLayout>
</ScrollView>

