<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_24sdp"
        android:paddingRight="@dimen/_24sdp"
        android:paddingTop="@dimen/_40sdp">

        <TextView
            style="@style/TextRegularSizeRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ADD INCOME"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/white" />


        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/input_amount"
                style="@style/TextRegularSizeSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:paddingBottom="@dimen/_15sdp"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/white"
                android:inputType="numberDecimal"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>


        <!--prompt -   android:prompt="@string/spinner_title" -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:padding="@dimen/_5sdp" />

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etIncomeResource"
                style="@style/TextRegularSizeSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_15sdp"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/white"
                android:hint="@string/income_resource"
                android:inputType="textCapWords|textNoSuggestions"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <TextView
            android:id="@+id/tvSave"
            style="@style/TextRegularSizeMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_yellow"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@android:color/black" />


    </LinearLayout>
</ScrollView>